[tool.poetry]
name = "flaskdeploytest"
version = "0.1.0"
description = ""
authors = ["Alex Davis <8m3xlt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.3"
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
